# klippy

./: .gitignore  README.md  index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/clipboard/: macos.rs  mod.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/db/: mod.rs  schema.rs
src-tauri/src/services/: clip_engine.rs  media_store.rs  mod.rs  prune.rs
src-tauri/src/utils/: hash.rs
src/components/: ClipList.test.tsx  ClipList.tsx  ClipRow.tsx  EmptyState.test.tsx  EmptyState.tsx  SearchBox.tsx
src/lib/: api.ts  store.test.ts  store.ts  types.ts
src/styles/: tailwind.css
