[package]
name = "klippy"
version = "0.1.0"
description = "High-performance clipboard manager"
authors = ["Klippy"]
license = "MIT"
edition = "2021"
rust-version = "1.78"

[lib]
name = "klippy_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
once_cell = "1.20"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
thiserror = "2"
tokio = { version = "1", features = ["rt", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
